# optimal-maze-builder-rust

./: .gitignore  Cargo.toml  data.json
src/: builders.rs  graphs.rs  main.rs  models.rs
src/builders/: common.rs  cutoff.rs
src/graphs/: astar.rs  dfs.rs  utils.rs
